fix: make JEI crafting transfer Java 8 compatible